@startuml
!theme reddress-darkgreen

class pumlFromJava.doclets.FirstDoclet

class pumlFromJava.doclets.PumlDoclet

class pumlFromJava.doclets.options.OutOption {
NameFile

}

class pumlFromJava.doclets.options.PathOption {
path

}

class pumlFromJava.doclets.options.TypeOption {
type

}

class pumlFromJava.generators.Java2Puml

interface pumlFromJava.translators.diagrams.IPumlDiagram
class pumlFromJava.translators.diagrams.PumlBasis implements pumlFromJava.translators.diagrams.IPumlDiagram

class pumlFromJava.translators.diagrams.PumlDCA implements pumlFromJava.translators.diagrams.IPumlDiagram

class pumlFromJava.translators.diagrams.PumlDCC implements pumlFromJava.translators.diagrams.IPumlDiagram

interface pumlFromJava.translators.ElementTranslator
interface pumlFromJava.translators.Nameable
class pumlFromJava.translators.PumlMethod implements pumlFromJava.translators.ElementTranslator, pumlFromJava.translators.Nameable

class pumlFromJava.translators.PumlType implements pumlFromJava.translators.ElementTranslator

class pumlFromJava.translators.TranslatorTools

class pumlFromJava.translators.pumlMarker.Marker

interface pumlFromJava.translators.pumlObjects.InheritableObject
interface pumlFromJava.translators.pumlObjects.ObjectTranslator extends pumlFromJava.translators.ElementTranslator, pumlFromJava.translators.Nameable
abstract pumlFromJava.translators.pumlObjects.PumlObject implements pumlFromJava.translators.pumlObjects.ObjectTranslator

interface pumlFromJava.translators.pumlObjects.RelationableObject
class pumlFromJava.translators.pumlObjects.pumlClasses.PumlClass extends pumlFromJava.translators.pumlObjects.pumlClasses.PumlClasses

abstract pumlFromJava.translators.pumlObjects.pumlClasses.PumlClasses extends pumlFromJava.translators.pumlObjects.PumlObject implements pumlFromJava.translators.pumlObjects.InheritableObject, pumlFromJava.translators.pumlObjects.RelationableObject

class pumlFromJava.translators.pumlObjects.pumlClasses.PumlEnum extends pumlFromJava.translators.pumlObjects.PumlObject

class pumlFromJava.translators.pumlObjects.pumlClasses.PumlInterface extends pumlFromJava.translators.pumlObjects.PumlObject implements pumlFromJava.translators.pumlObjects.InheritableObject

class pumlFromJava.translators.pumlObjects.pumlClasses.PumlLiteClass extends pumlFromJava.translators.pumlObjects.pumlClasses.PumlClasses

class pumlFromJava.translators.pumlViewers.ModifiersViewer implements pumlFromJava.translators.ElementTranslator

class pumlFromJava.translators.pumlViewers.VisibilityViewer implements pumlFromJava.translators.ElementTranslator

class pumlFromJava.writers.Writer implements pumlFromJava.writers.WriterSpecies {
filepath

}

interface pumlFromJava.writers.WriterSpecies
pumlFromJava.doclets.options.PathOption <-- PumlDoclet : <<Use>>
pumlFromJava.doclets.options.OutOption <-- PumlDoclet : <<Use>>
pumlFromJava.doclets.options.TypeOption <-- PumlDoclet : <<Use>>
pumlFromJava.translators.pumlViewers.VisibilityViewer <-- PumlClass : <<Use>>
pumlFromJava.translators.pumlViewers.ModifiersViewer <-- PumlClasses : <<Use>>

@enduml

